@startuml
left to right direction
class LikesyesnoCont [[java:dev.mvc.likesyesno.LikesyesnoCont]] {
  +LikesyesnoCont()
  +like_insert(model: Model, session: HttpSession, likesyesnoVO: LikesyesnoVO): String
  +unlike(model: Model, session: HttpSession, likesyesnoVO: LikesyesnoVO): String
}
class LikesyesnoProcInter {
}
LikesyesnoCont --> "1" LikesyesnoProcInter : likesyesnoProc
class LikesyesnoProc [[java:dev.mvc.likesyesno.LikesyesnoProc]] {
  +like_insert(likesyesnoVO: LikesyesnoVO): int
  +like_read(exrecordno: int): ArrayList<LikesyesnoVO>
  +like_cnt(exrecordno: int): int
  +unlike(map: HashMap<String,Object>): int
}
class LikesyesnoDAOInter {
}
LikesyesnoProc --> "1" LikesyesnoDAOInter : likesyesnoDAO
interface LikesyesnoProcInter {
}
LikesyesnoProcInter <|.. LikesyesnoProc
class LikesyesnoVO [[java:dev.mvc.likesyesno.LikesyesnoVO]] {
  -likesno: int
  -likesdate: String
  -exrecordno: int
  -memberno: int
  -id: String
  -passwd: String
  -mname: String
  -tel: String
  -mdate: String
  -grade: int
  -point: int
  -birth: String
  -sex: String
  -nickname: String
  -introduce: String
  -files1MF: MultipartFile
  -sizes_label: String
  -profile: String
  -profilesaved: String
  -thumbs: String
  -sizes: long
  +setLikesno(likesno: int): void
  +setLikesdate(likesdate: String): void
  +setExrecordno(exrecordno: int): void
  +setMemberno(memberno: int): void
  +setId(id: String): void
  +setPasswd(passwd: String): void
  +setMname(mname: String): void
  +setTel(tel: String): void
  +setMdate(mdate: String): void
  +setGrade(grade: int): void
  +setPoint(point: int): void
  +setBirth(birth: String): void
  +setSex(sex: String): void
  +setNickname(nickname: String): void
  +setIntroduce(introduce: String): void
  +setFiles1MF(files1MF: MultipartFile): void
  +setSizes_label(sizes_label: String): void
  +setProfile(profile: String): void
  +setProfilesaved(profilesaved: String): void
  +setThumbs(thumbs: String): void
  +setSizes(sizes: long): void
  +getLikesno(): int
  +getLikesdate(): String
  +getExrecordno(): int
  +getMemberno(): int
  +getId(): String
  +getPasswd(): String
  +getMname(): String
  +getTel(): String
  +getMdate(): String
  +getGrade(): int
  +getPoint(): int
  +getBirth(): String
  +getSex(): String
  +getNickname(): String
  +getIntroduce(): String
  +getFiles1MF(): MultipartFile
  +getSizes_label(): String
  +getProfile(): String
  +getProfilesaved(): String
  +getThumbs(): String
  +getSizes(): long
}
interface LikesyesnoDAOInter [[java:dev.mvc.likesyesno.LikesyesnoDAOInter]] {
  like_insert(likesyesnoVO: LikesyesnoVO): int
  like_read(exrecordno: int): ArrayList<LikesyesnoVO>
  like_cnt(exrecordno: int): int
  unlike(map: HashMap<String,Object>): int
}
interface LikesyesnoProcInter [[java:dev.mvc.likesyesno.LikesyesnoProcInter]] {
  like_insert(likesyesnoVO: LikesyesnoVO): int
  like_read(exrecordno: int): ArrayList<LikesyesnoVO>
  like_cnt(exrecordno: int): int
  unlike(map: HashMap<String,Object>): int
}
@enduml